--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
     <h1 class="title">Projetos</h1>
     <div class="experience-details-container">
       <div class="about-containers">
+        
       <div class="details-container color-container">
         <div class="article-container">
           <img src="./assets/projeto_tibia.png" alt="project 1" class="project-img">
@@ -252,6 +253,7 @@
     </nav>
     <p>Copyright &#169; 2024 Weslley Caetano. All Rights Reserved.</p>
   </footer>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
