--- a/index.html
+++ b/index.html
@@ -199,12 +199,12 @@
 
       <div class="details-container color-container">
         <div class="article-container">
-          <img src="./assets/soon.png" alt="project 1" class="project-img">
+          <img src="./assets/projeto_rock_paper_scissors.png" alt="project 2" class="project-img">
         </div>
-        <h2 class="experience-sub-title project-title">Em breve</h2>
+        <h2 class="experience-sub-title project-title">Rock Paper Scissors Game</h2>
         <div class="btn-container">
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/wescaetano'">Github</button>
-          <button class="btn btn-color-2 project-btn" onclick="location.href='#projects'">Deploy</button>
+          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/wescaetano/rock-paper-scissors-game'">Github</button>
+          <button class="btn btn-color-2 project-btn" onclick="location.href='https://wescaetano.github.io/rock-paper-scissors-game/'">Deploy</button>
         </div>
       </div>
 
