--- a/index.html
+++ b/index.html
@@ -220,7 +220,12 @@
       </div>
     </div>
   </div>
+</div>
+</div>
+
+
     <img src="assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'">
+
   </section>
 
   <section id="contact">
