--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
         <div class="article-container">
           <img src="./assets/soon.png" alt="project 1" class="project-img">
         </div>
-        <h2 class="experience-sub-title project-title">Em breve</h2>
+        <h2 class="experience-sub-title project-title">Cardápio nline</h2>
         <div class="btn-container">
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/wescaetano'">Github</button>
-          <button class="btn btn-color-2 project-btn" onclick="location.href='#projects'">Deploy</button>
+          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/wescaetano/snack-bar-menu'">Github</button>
+          <button class="btn btn-color-2 project-btn" onclick="location.href='https://boisterous-speculoos-e24897.netlify.app/'">Deploy</button>
         </div>
       </div>
     </div>
