Update in projects images

--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
 
       <div class="details-container color-container">
         <div class="article-container">
-          <img src="./assets/soon.png" alt="project 1" class="project-img">
+          <img src="./assets/project_snack_bar_menu.png" alt="project 3" class="project-img">
         </div>
-        <h2 class="experience-sub-title project-title">Cardápio nline</h2>
+        <h2 class="experience-sub-title project-title">Cardápio Online</h2>
         <div class="btn-container">
           <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/wescaetano/snack-bar-menu'">Github</button>
           <button class="btn btn-color-2 project-btn" onclick="location.href='https://boisterous-speculoos-e24897.netlify.app/'">Deploy</button>
