--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <h2 class="experience-sub-title project-title">Blog Tibia</h2>
         <div class="btn-container">
           <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/wescaetano/tibiaSite'">Github</button>
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://wescaetano.github.io/tibiaSite/index.html'">Deploy</button>
+          <button class="btn btn-color-2 project-btn" onclick="location.href='https://wescaetano.github.io/tibia-site/index.html'">Deploy</button>
         </div>
       </div>
 
