--- a/index.html
+++ b/index.html
@@ -124,16 +124,10 @@
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
               <div>
                 <h3>Bootstrap</h3>
-                <p>Básico</p>
+                <p>Intermediário</p>
               </div>
             </article>
-            <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
-              <div>
-                <h3>Tailwind</h3>
-                <p>Aprendendo</p>
-              </div>
-            </article>
+
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
               <div>
@@ -149,29 +143,43 @@
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
               <div>
-                <h3>Node.js</h3>
-                <p>Aprendendo</p>
+                <h3>Java</h3>
+                <p>Intermediário</p>
               </div>
             </article>
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
               <div>
-                <h3>Express.js</h3>
-                <p>Aprendendo</p>
+                <h3>Spring Boot</h3>
+                <p>Intermediário</p>
               </div>
             </article>
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
               <div>
                 <h3>PostgreSQL</h3>
-                <p>Aprendendo</p>
+                <p>Intermediário</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <div>
+                <h3>MySQL</h3>
+                <p>Intermediário</p>
               </div>
             </article>
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
               <div>
                 <h3>Git</h3>
-                <p>Básico</p>
+                <p>Intermediário</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <div>
+                <h3>C++</h3>
+                <p>Intermediário</p>
               </div>
             </article>
           </div>
