--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       <div class="about-containers">
         
       <div class="details-container color-container">
-        <div class="article-container">
+        <div class="article-container-img">
           <img src="./assets/projeto_tibia.png" alt="project 1" class="project-img">
         </div>
         <h2 class="experience-sub-title project-title">Blog Tibia</h2>
@@ -206,7 +206,7 @@
       </div>
 
       <div class="details-container color-container">
-        <div class="article-container">
+        <div class="article-container-img">
           <img src="./assets/projeto_rock_paper_scissors.png" alt="project 2" class="project-img">
         </div>
         <h2 class="experience-sub-title project-title">Rock Paper Scissors Game</h2>
@@ -217,7 +217,7 @@
       </div>
 
       <div class="details-container color-container">
-        <div class="article-container">
+        <div class="article-container-img">
           <img src="./assets/project_snack_bar_menu.png" alt="project 3" class="project-img">
         </div>
         <h2 class="experience-sub-title project-title">Cardápio Online</h2>
