Fix: changing the description text

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </div>
         </div>
         <div class="text-container">
-          <p>Olá, me chamo Weslley e atualmente estou disponível para criar <b>sites institucionais</b>  e <b>landing pages</b>. Caso você precise de sites com essas finalidades, sinta-se à vontade para me contatar. Será um prazer contribuir para o avanço de seu negócio.</p> 
+          <p>Olá, me chamo Weslley! Sou um desenvolvedor Backend Júnior com foco em <b>Java</b> e <b>Spring Boot</b>. Possuo experiência em bancos de dados <b>PostgreSQL</b> e <b>MySQL</b>, além de versionamento com <b>Git</b>. Foco em criar APIs robustas e eficientes.</p> 
         </div>
       </div>
     </div>
