--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div class="details-container">
             <img src="assets/education.png" alt="Education icon" class="icon">
             <h3>Educação</h3>
-            <p> Faculdade de Tecnologia de Itapetininga (FATEC-IP) <br> <B>Análise e desenvolvimento de sistemas</B> </p>
+            <p> Faculdade de Tecnologia de Itapetininga (FATEC-ITA) <br> <B>Análise e desenvolvimento de sistemas</B> </p>
           </div>
         </div>
         <div class="text-container">
