fix: correct instagram username in profile link

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <img src="assets/linkedin.png" alt="My linkedin profile" class="icon" onclick="location.href='https://www.linkedin.com/in/weslleycsoares/'">
         <img src="assets/github.png" alt="My github profile" class="icon" onclick="location.href='https://github.com/wescaetano'
         ">
-        <img src="assets/icons8-instagram-50.png" alt="My instagram profile" class="icon" onclick="location.href='https://instagram.com/_weszx'
+        <img src="assets/icons8-instagram-50.png" alt="My instagram profile" class="icon" onclick="location.href='https://instagram.com/_weslleycaetano'
         ">
       </div>
       </div>
